[package]
name = "rosm"
version = "0.1.0"
authors = ["Jens Hausdorf <mail@jens-hausdorf.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.1"
image = { version = "^0.22", default-features = false, features = ["png_codec"] }
line_drawing = "^0.8.0"
cssparser = "^0.27"
markup5ever = "^0.8"
once_cell = "1.3.1"
kuchiki = "^0.7"
rayon = "^1.3"
pest = "2"
pest_derive = "2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["std", "psapi", "processthreadsapi"] }