[package]
name = "rosm"
version = "0.1.0"
authors = ["Jens Hausdorf <mail@jens-hausdorf.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.1"
once_cell = "1.3.1"
kuchiki = "^0.7"
rayon = "^1.3"
pest = "2"
pest_derive = "2"
log = "0.4"
flexi_logger = "0.15"
piston = "0.49"
piston2d-graphics = "0.36"
piston_window = "0.107.0"
piston2d-opengl_graphics = "0.72.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["std", "psapi", "processthreadsapi"] }