[package]
name = "rosm"
version = "0.1.0"
authors = ["Jens Hausdorf <mail@jens-hausdorf.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.2"
once_cell = "1"
pest = "2"
pest_derive = "2"
log = "0.4"
flexi_logger = "0.18"
image = "^0.24"
line_drawing = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "^0.3", features = ["std", "psapi", "processthreadsapi"] }

[profile.release]
debug = true